Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1528

Crash: impala::TupleRow::GetTuple

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.1
    • Impala 2.1
    • None

    Description

      QUERY:

      SELECT
      t2.int_col,
      LEAST(COALESCE(t2.int_col, 922), COALESCE(t1.id, 528)) AS int_col_2,
      t1.string_col,
      LEAST(COALESCE(t1.id, -552), COALESCE(t1.tinyint_col, -988)) AS int_col_3
      FROM alltypesagg t1
      LEFT JOIN (
      SELECT
      t1.boolean_col,
      t1.boolean_col AS boolean_col_2,
      (-892.32) < (304) AS boolean_col_3,
      (540) IN (-351, -907.14) AS boolean_col_4,
      COALESCE(76, -937, -981) AS int_col
      FROM (
      SELECT
      (MIN(t1.int_col)) = (687) AS boolean_col
      FROM alltypestiny t1
      LEFT JOIN alltypestiny t2 ON ((t2.smallint_col) = (t1.id)) AND ((t2.timestamp_col) = (t1.timestamp_col))
      WHERE
      (t1.int_col) IN (t1.id, t2.smallint_col)
      ) t1
      ) t2 ON (t2.int_col) = (t1.year)
      

      STACK:

      raise () from /lib64/libc.so.6
      raise () from /lib64/libc.so.6
      abort () from /lib64/libc.so.6
      os::abort(bool) () from /opt/toolchain/sun-jdk-64bit-1.6.0.31/jre/lib/amd64/server/libjvm.so
      VMError::report_and_die() () from /opt/toolchain/sun-jdk-64bit-1.6.0.31/jre/lib/amd64/server/libjvm.so
      JVM_handle_linux_signal () from /opt/toolchain/sun-jdk-64bit-1.6.0.31/jre/lib/amd64/server/libjvm.so
      signalHandler(int, siginfo*, void*) () from /opt/toolchain/sun-jdk-64bit-1.6.0.31/jre/lib/amd64/server/libjvm.so
      #6  <signal handler called>
      impala::TupleRow::GetTuple (this=0x0, tuple_idx=1) at /data/9/query-gen/Impala/be/src/runtime/tuple-row.h:31
      impala::TupleIsNullPredicate::GetBooleanVal (this=0x7df9880, ctx=0xe8b86e0, row=0x0) at /data/9/query-gen/Impala/be/src/exprs/tuple-is-null-predicate.cc:28
      impala::IfExpr::GetSmallIntVal (this=0xd0c3a00, context=0xe8b86e0, row=0x0) at /data/9/query-gen/Impala/be/src/exprs/conditional-functions-ir.cc:108
      impala::CoalesceExpr::GetSmallIntVal (this=0xd0c2b60, context=0xe8b86e0, row=0x0) at /data/9/query-gen/Impala/be/src/exprs/conditional-functions-ir.cc:129
      impala::Expr::GetConstVal (this=0xd0c2b60, context=0xe8b86e0) at /data/9/query-gen/Impala/be/src/exprs/expr.cc:505
      impala::ScalarFnCall::Open (this=0x7df9180, state=0x5f56000, ctx=0xe8b86e0, scope=impala_udf::FunctionContext::FRAGMENT_LOCAL) at /data/9/query-gen/Impala/be/src/exprs/scalar-fn-call.cc:157
      impala::Expr::Open (this=0xc45ce00, state=0x5f56000, context=0xe8b86e0, scope=impala_udf::FunctionContext::FRAGMENT_LOCAL) at /data/9/query-gen/Impala/be/src/exprs/expr.cc:368
      impala::ScalarFnCall::Open (this=0xc45ce00, state=0x5f56000, ctx=0xe8b86e0, scope=impala_udf::FunctionContext::FRAGMENT_LOCAL) at /data/9/query-gen/Impala/be/src/exprs/scalar-fn-call.cc:139
      impala::ExprContext::Open (this=0xe8b86e0, state=0x5f56000) at /data/9/query-gen/Impala/be/src/exprs/expr-context.cc:63
      impala::Expr::Open (ctxs=std::vector of length 4, capacity 4 = {...}, state=0x5f56000) at /data/9/query-gen/Impala/be/src/exprs/expr.cc:360
      impala::ImpalaServer::QueryExecState::WaitInternal (this=0xa202000) at /data/9/query-gen/Impala/be/src/service/query-exec-state.cc:547
      impala::ImpalaServer::QueryExecState::Wait (this=0xa202000) at /data/9/query-gen/Impala/be/src/service/query-exec-state.cc:522
      boost::_mfi::mf0<void, impala::ImpalaServer::QueryExecState>::operator() (this=0x7fa6e18eacd8, p=0xa202000) at /usr/include/boost/bind/mem_fn_template.hpp:49
      boost::_bi::list1<boost::_bi::value<impala::ImpalaServer::QueryExecState*> >::operator()<boost::_mfi::mf0<void, impala::ImpalaServer::QueryExecState>, boost::_bi::list0> (this=0x7fa6e18eace8, f=..., a=...) at /usr/include/boost/bind/bind.hpp:253
      boost::_bi::bind_t<void, boost::_mfi::mf0<void, impala::ImpalaServer::QueryExecState>, boost::_bi::list1<boost::_bi::value<impala::ImpalaServer::QueryExecState*> > >::operator() (this=0x7fa6e18eacd8) at /usr/include/boost/bind/bind_template.hpp:20
      boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf0<void, impala::ImpalaServer::QueryExecState>, boost::_bi::list1<boost::_bi::value<impala::ImpalaServer::QueryExecState*> > >, void>::invoke (function_obj_ptr=...) at /usr/include/boost/function/function_template.hpp:153
      boost::function0<void>::operator() (this=0x7fa6e18eacd0) at /usr/include/boost/function/function_template.hpp:1013
      impala::Thread::SuperviseThread (name="wait-thread", category="query-exec-state", functor=..., thread_started=0x7fa71d38a920) at /data/9/query-gen/Impala/be/src/util/thread.cc:311
      boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> >::operator()<void (*)(const std::string&, const std::string&, impala::Thread::ThreadFunctor, impala::Promise<long int>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(const std::string &, const std::string &, impala::Thread::ThreadFunctor, impala::Promise<long> *), boost::_bi::list0 &, int) (this=0xc564eb0, f=@0xc564ea8, a=...) at /usr/include/boost/bind/bind.hpp:457
      boost::_bi::bind_t<void, void (*)(const std::string&, const std::string&, impala::Thread::ThreadFunctor, impala::Promise<long int>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> > >::operator()(void) (this=0xc564ea8) at /usr/include/boost/bind/bind_template.hpp:20
      boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(const std::string&, const std::string&, impala::Thread::ThreadFunctor, impala::Promise<long int>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> > > >::run(void) (this=0xc564d20) at /usr/include/boost/thread/detail/thread.hpp:61
      thread_proxy ()
      start_thread () from /lib64/libpthread.so.0
      clone () from /lib64/libc.so.6
      

      DB: Functional
      File Format: Text/None
      git Hash: 05c3cc5

      Attachments

        Activity

          People

            skye Skye Wanderman-Milne
            tarasbob Taras Bobrovytsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: