be/src/exprs/tuple-is-null-predicate.h
@@ -38,6 +38,8 @@ class TupleIsNullPredicate: public Predicate {
   virtual Status GetCodegendComputeFn(RuntimeState* state, llvm::Function** fn);
   virtual std::string DebugString() const;
 
+  virtual bool IsConstant() const { return false; }
+
   virtual BooleanVal GetBooleanVal(ExprContext* context, TupleRow* row);
 
  private:
